--- a/CompanyWebApp/Views/Shared/_Layout.cshtml
+++ b/CompanyWebApp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Продукти</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Компанії</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Programmers" asp-action="Index">Програмісти</a>
                         </li>
                     </ul>
                 </div>
