--- a/CompanyWebApp/Views/Companies/Create.cshtml
+++ b/CompanyWebApp/Views/Companies/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CompanyWebApp.Models.Company
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Створити";
 }
 
-<h1>Create</h1>
+<h1>Додати</h1>
 
-<h4>Company</h4>
+<h4>Компанію</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -57,14 +57,14 @@
                 <span asp-validation-for="Edrpou" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Повернутися назад</a>
 </div>
 
 @section Scripts {
