--- a/CompanyWebApp/Views/Companies/Delete.cshtml
+++ b/CompanyWebApp/Views/Companies/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model CompanyWebApp.Models.Company
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалити";
 }
 
-<h1>Delete</h1>
+<h1>Видалити</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви впевнені, що хочете видалити?</h3>
 <div>
-    <h4>Company</h4>
+    <h4>Компанію</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -63,13 +63,13 @@
             @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country.Id)
+            @Html.DisplayFor(model => model.Country.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Повернутися назад</a>
     </form>
 </div>
