--- a/CompanyWebApp/Views/Companies/Edit.cshtml
+++ b/CompanyWebApp/Views/Companies/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CompanyWebApp.Models.Company
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Змінити";
 }
 
-<h1>Edit</h1>
+<h1>Змінити</h1>
 
-<h4>Company</h4>
+<h4>Компанію</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -59,14 +59,14 @@
                 <span asp-validation-for="Edrpou" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
 @section Scripts {
