--- a/CompanyWebApp/Views/Companies/Index.cshtml
+++ b/CompanyWebApp/Views/Companies/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<CompanyWebApp.Models.Company>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Компанії";
 }
 
-<h1>Index</h1>
+<h1>Компанії</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Додати нову</a>
 </p>
 <table class="table">
     <thead>
@@ -37,7 +37,7 @@
                 @Html.DisplayNameFor(model => model.Edrpou)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Country)
+                @Html.DisplayNameFor(model => model.CountryId)
             </th>
             <th></th>
         </tr>
@@ -70,12 +70,11 @@
                 @Html.DisplayFor(modelItem => item.Edrpou)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.Id)
+                @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Змінити</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Видалити</a>
             </td>
         </tr>
 }
