--- a/CompanyWebApp/Views/Countries/Create.cshtml
+++ b/CompanyWebApp/Views/Countries/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CompanyWebApp.Models.Country
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Додати";
 }
 
-<h1>Create</h1>
+<h1>Додати</h1>
 
-<h4>Country</h4>
+<h4>Країну</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -58,14 +58,14 @@
                 <span asp-validation-for="Area" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
 @section Scripts {
