--- a/CompanyWebApp/Views/Countries/Delete.cshtml
+++ b/CompanyWebApp/Views/Countries/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model CompanyWebApp.Models.Country
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалити";
 }
 
-<h1>Delete</h1>
+<h1>Видалити</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви впевнені, що хочете видалити?</h3>
 <div>
-    <h4>Country</h4>
+    <h4>Країну</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -69,7 +69,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Назад</a>
     </form>
 </div>
