--- a/CompanyWebApp/Views/Countries/Index.cshtml
+++ b/CompanyWebApp/Views/Countries/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<CompanyWebApp.Models.Country>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Країни";
 }
 
-<h1>Index</h1>
+<h1>Країни</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Додати нову</a>
 </p>
 <table class="table">
     <thead>
@@ -73,9 +73,8 @@
                 @Html.DisplayFor(modelItem => item.Area)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Змінити</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Видалити</a>
             </td>
         </tr>
 }
