--- a/CompanyWebApp/Views/Products/Create.cshtml
+++ b/CompanyWebApp/Views/Products/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CompanyWebApp.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Додати";
 }
 
-<h1>Create</h1>
+<h1>Додати</h1>
 
-<h4>Product</h4>
+<h4>Продукт</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -62,14 +62,14 @@
                 <select asp-for="CompanyId" class ="form-control" asp-items="ViewBag.CompanyId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
 @section Scripts {
