--- a/CompanyWebApp/Views/Products/Delete.cshtml
+++ b/CompanyWebApp/Views/Products/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model CompanyWebApp.Models.Product
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалити";
 }
 
-<h1>Delete</h1>
+<h1>Видалити</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви впевнені, що хечете видалити?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Продукт</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -66,16 +66,16 @@
             @Html.DisplayFor(model => model.Info)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Company)
+            @Html.DisplayNameFor(model => model.CompanyId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Company.Id)
+            @Html.DisplayFor(model => model.Company.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Назад</a>
     </form>
 </div>
