--- a/CompanyWebApp/Views/Programmers/Delete.cshtml
+++ b/CompanyWebApp/Views/Programmers/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model CompanyWebApp.Models.Programmer
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалити";
 }
 
-<h1>Delete</h1>
+<h1>Видалити</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ви впевнені, що хочете видалити?</h3>
 <div>
-    <h4>Programmer</h4>
+    <h4>Програміста</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -54,22 +54,22 @@
             @Html.DisplayFor(model => model.Place)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Citizen)
+            @Html.DisplayNameFor(model => model.CitizenId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Citizen.Id)
+            @Html.DisplayFor(model => model.Citizen.FullName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Company)
+            @Html.DisplayNameFor(model => model.CompanyId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Company.Id)
+            @Html.DisplayFor(model => model.Company.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
+        <a asp-action="Index">Програміста</a>
     </form>
 </div>
