--- a/CompanyWebApp/Views/Programmers/Index.cshtml
+++ b/CompanyWebApp/Views/Programmers/Index.cshtml
@@ -34,10 +34,10 @@
                 @Html.DisplayNameFor(model => model.Place)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Citizen.Id)
+                @Html.DisplayNameFor(model => model.CitizenId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Company.Id)
+                @Html.DisplayNameFor(model => model.CompanyId)
             </th>
             <th></th>
         </tr>
