--- a/CompanyWebApp/Views/Shared/_Layout.cshtml
+++ b/CompanyWebApp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Programmers" asp-action="Index">Програмісти</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MyQuery" asp-action="Index">Запити</a>
+                        </li>
                     </ul>
                 </div>
             </div>
