--- a/CompanyWebApp/Views/Home/Index.cshtml
+++ b/CompanyWebApp/Views/Home/Index.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Вітаю!</h1>
-    <p>Лабораторна робота #2 з БД</p>
+    <h2>Лабораторна робота #2 з БД</h2>
+    <h6>Згори, на панелі ви можете бачити кнопки з окремими таблицями, натиснувши ви зможете переглядати інформацію, додавати, змінювати та видаляти.</h6>
+    <h6>Кнопка "Запити" для виконання запитів.</h6>
+    <h6>Кнопка "На головну" завжди поверне вас на початкову сторінку.</h6>
+    <h6>Кнопка "Звіт з інструкцією користувача" направляє на файл-документацію, де описано абсолютно все, що стосується експлуатації застосунку</h6>
 </div>
