--- a/CompanyWebApp/Views/MyQuery/Execute6.cshtml
+++ b/CompanyWebApp/Views/MyQuery/Execute6.cshtml
@@ -1,13 +1,19 @@
 ﻿@model List<Query6ResultViewModel>
 
 <h1>Імена програмiстів, які працюють в тих компаніях  і тільки тих, що й громадянин з введеним Id</h1>
-<h4>string query = SELECT DISTINCT ct.FullName AS CitizenName 
-                   FROM Programmers p 
-                   INNER JOIN Companies c ON p.CompanyId = c.Id 
-                   INNER JOIN Citizens ct ON p.CitizenId = ct.Id 
-                   WHERE c.Id IN (SELECT CompanyId 
-                                  "FROM Programmers 
-                                  "WHERE CitizenId = enteredId);
+<h4>
+    SELECT ct.FullName<br>
+    FROM Citizens ct<br>
+    WHERE NOT EXISTS (<br>
+    SELECT *<br>
+    FROM companies c<br>
+    WHERE NOT EXISTS (<br>
+    SELECT *<br>
+    FROM Programmers p<br>
+    WHERE c.id = p.CompanyId<br>
+    AND p.citizen_id = enteredId<br>
+    )
+    )
 </h4>
 
     <table>
