--- a/CompanyWebApp/Views/Companies/Edit.cshtml
+++ b/CompanyWebApp/Views/Companies/Edit.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="StaffCount" class="control-label"></label>
-                <input asp-for="StaffCount" class="form-control" />
+                <input asp-for="StaffCount" class="form-control" type="number" min="0" />
                 <span asp-validation-for="StaffCount" class="text-danger"></span>
             </div>
             <div class="form-group">
