--- a/CompanyWebApp/Views/Countries/Edit.cshtml
+++ b/CompanyWebApp/Views/Countries/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gdp" class="control-label"></label>
-                <input asp-for="Gdp" class="form-control" />
+                <input asp-for="Gdp" class="form-control" type="number" min="0" />
                 <span asp-validation-for="Gdp" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Population" class="control-label"></label>
-                <input asp-for="Population" class="form-control" />
+                <input asp-for="Population" class="form-control" type="number" min="0" />
                 <span asp-validation-for="Population" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Area" class="control-label"></label>
-                <input asp-for="Area" class="form-control" />
+                <input asp-for="Area" class="form-control" type="number" min="0" />
                 <span asp-validation-for="Area" class="text-danger"></span>
             </div>
             <div class="form-group">
