--- a/CompanyWebApp/Views/MyQuery/Index.cshtml
+++ b/CompanyWebApp/Views/MyQuery/Index.cshtml
@@ -11,7 +11,7 @@
 <h4>Країни, в яких проживають програмісти, що мають досвід роботи більше вказаної користувачем кількості років</h4>
 <form method="post" asp-action="Execute2">
     <label for="parameterIntValue">Введіть значення параметру:</label>
-    <input type="number" id="parameterIntValue" name="ParameterIntValue" />
+        <input type="number" id="parameterIntValue" name="ParameterIntValue" min="0" />
     <button type="submit">Виконати запит</button>
 </form>
 </div>
@@ -27,7 +27,7 @@
     <h4>Програмісти та їх спеціалізація, які працюють у певній компанії з кількістю працівників більшою за введене користувачем число</h4>
     <form method="post" asp-action="Execute4">
         <label for="parameterIntValue">Введіть значення параметру:</label>
-        <input type="number" id="parameterIntValue" name="ParameterIntValue" />
+        <input type="number" id="parameterIntValue" name="ParameterIntValue" min="0" />
         <button type="submit">Виконати запит</button>
     </form>
 </div>
@@ -35,7 +35,7 @@
     <h4>Країни, які мають компанії з вказаною кількістю продуктів</h4>
     <form method="post" asp-action="Execute5">
         <label for="parameterIntValue">Введіть значення параметру:</label>
-        <input type="number" id="parameterIntValue" name="ParameterIntValue" />
+        <input type="number" id="parameterIntValue" name="ParameterIntValue" min="0" />
         <button type="submit">Виконати запит</button>
     </form>
 </div>
@@ -43,7 +43,7 @@
     <h4>Імена програмістів, які працюють в тих компаніях  і тільки тих, що й громадянин з введеним Id</h4>
     <form method="post" asp-action="Execute6">
         <label for="parameterIntValue">Введіть значення параметру:</label>
-        <input type="number" id="parameterIntValue" name="ParameterIntValue" />
+        <input type="number" id="parameterIntValue" name="ParameterIntValue" min="0" />
         <button type="submit">Виконати запит</button>
     </form>
 </div>
@@ -56,6 +56,22 @@
 <div>
     <h4>Прізвище програмістів та назви їх компаній, які мають хоча б одного колегу</h4>
     <form method="post" asp-action="Execute8">
+        <button type="submit">Виконати запит</button>
+    </form>
+</div>
+<div>
+    <h4>Продукти, які виготовлені в країні тій, і тільки тій, що й продукт з введеним користувачем Id</h4>
+    <form method="post" asp-action="Execute9">
+        <label for="parameterIntValue">Введіть значення параметру:</label>
+        <input type="number" id="parameterIntValue" name="ParameterIntValue" min="0" />
+        <button type="submit">Виконати запит</button>
+    </form>
+</div>
+<div>
+    <h4>Програмісти, які працюють над тим і тільки тим продуктом, що й програміст з введеним Id</h4>
+    <form method="post" asp-action="Execute10">
+        <label for="parameterIntValue">Введіть значення параметру:</label>
+        <input type="number" id="parameterIntValue" name="ParameterIntValue" min="0" />
         <button type="submit">Виконати запит</button>
     </form>
 </div>
