--- a/CompanyWebApp/Views/Programmers/Create.cshtml
+++ b/CompanyWebApp/Views/Programmers/Create.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="YearsExperience" class="control-label"></label>
-                <input asp-for="YearsExperience" class="form-control" />
+                <input asp-for="YearsExperience" class="form-control" type="number" min="0" />
                 <span asp-validation-for="YearsExperience" class="text-danger"></span>
             </div>
             <div class="form-group">
