--- a/CompanyWebApp/Views/Shared/_Layout.cshtml
+++ b/CompanyWebApp/Views/Shared/_Layout.cshtml
@@ -38,6 +38,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="MyQuery" asp-action="Index">Запити</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ml-auto">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://drive.google.com/file/d/1_4spSqQhjy_9mD8dkxGdR-RP9K6IxmXN/view?usp=sharing">Звіт з інструкцією користувача</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><strong>НА ГОЛОВНУ</strong></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
